# ipnet

./: .gitignore  README.md  ipnet.py  pyproject.toml
.github/: copilot-instructions.md
