[project]
name = "ipnet"
version = "0.1.0"
description = "IPv4/IPv6 subnet calculator with Rich and Typer"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "rich>=14.1.0",
    "typer>=0.9.0",
]

[project.scripts]
ipnet = "ipnet:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"